# api-gateway-middleware-centric

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d182509309c6_initial_schema.py
docs/: architecture-decisions.md
docs/superpowers/specs/: 2026-04-06-api-gateway-design.md
scripts/: dev_jwks_server.py  dev_token.py  seed_vendors.py
src/gateway/: config.py  logging_config.py  main.py
src/gateway/admin/: models.py  routes.py
src/gateway/auth/: dependencies.py  jwt.py  portal_tokens.py  tokens.py
src/gateway/cache/: dedup.py  redis.py  response_cache.py
src/gateway/db/: models.py  session.py
src/gateway/jobs/: manager.py  models.py
src/gateway/middleware/: logging.py  quota.py  rate_limit.py  tracing.py
src/gateway/observability/: metrics.py  tracing.py
src/gateway/quota/: models.py  tracker.py
src/gateway/routes/: jobs.py  proxy.py
src/gateway/vendors/: client.py  registry.py  secrets.py
src/gateway/vendors/adapters/: __init__.py  api_key.py  base.py  basic.py  custom.py  none.py  oauth2.py
tests/: conftest.py
tests/api/: test_admin.py  test_auth.py  test_jobs.py  test_middleware_e2e.py  test_proxy.py
tests/integration/: test_dedup.py  test_metrics.py  test_quota.py  test_rate_limit.py  test_response_cache.py
tests/unit/: test_adapters.py  test_dedup.py  test_jwt.py  test_logging_middleware.py  test_quota.py  test_rate_limit.py  test_registry.py  test_response_cache.py  test_tracing_middleware.py
